...
                        )
                    }
                    TextButton(
                        onClick = onShowTutorial,
                        modifier = Modifier.semantics {
                            testTag = "inline_hint_show_tutorial_button"
                            contentDescription = "Show me how"
                        },
                        contentPadding = PaddingValues(0.dp)
                    ) {
                        Icon(
                            imageVector = Icons.Default.PlayArrow,
                            contentDescription = null,
...
